--- a/TesteFrontSimples/src/app/components/templates/nav/nav.component.html
+++ b/TesteFrontSimples/src/app/components/templates/nav/nav.component.html
@@ -29,7 +29,7 @@
                     Pedidos
                   </mat-panel-title>
                 </mat-expansion-panel-header>
-                <p>This is the primary content of the panel.</p>
+                <button mat-button class="btn_menu_nav">Item exemplo</button>
             </mat-expansion-panel>
 
             <mat-expansion-panel class="acc_expansion">
@@ -39,7 +39,7 @@
                     Rotas
                   </mat-panel-title>
                 </mat-expansion-panel-header>
-                <p>This is the primary content of the panel.</p>
+                <button mat-button class="btn_menu_nav">Item exemplo</button>
             </mat-expansion-panel>
 
             <mat-nav-list class="nav-list">
@@ -67,7 +67,7 @@
                     Configurações
                   </mat-panel-title>
                 </mat-expansion-panel-header>
-                <p>This is the primary content of the panel.</p>
+                <button mat-button class="btn_menu_nav">Item exemplo</button>
             </mat-expansion-panel>
         </mat-accordion>
     </mat-sidenav>
